[FIX] web, project: list renderer alignment top
Prior to this commit some td in the list renderer were vertically align
on the middle while other are aligned on top. This comes from commit[1] 

This commit removes the vertical-align: middle to rely on the inherited
alignment from the `<td>` which is inherited until the `<table>` el
which set the alignment on `top`.

To visually center the icons previously centered by vertical-align,
a new variable: `$o-line-size` is created.

This variable accounts for the total size of a line which is the font
size multiplied by the line height.

In our case this ensure that the icons line height in the list view is
the same as the <td> that are containing text.

[1]: odoo/odoo@53f605399755f9355554c2582ea0f693c8f947b4

task-3557566

--- a/addons/project/static/src/components/project_task_state_selection/project_task_state_selection.scss
+++ b/addons/project/static/src/components/project_task_state_selection/project_task_state_selection.scss
@@ -19,6 +19,8 @@
     }
 
     .o_task_state_list_view {
+        height: $o-line-size;
+
         .fa-lg {
             font-size: 1.315em;
             vertical-align: -6%;
